@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007 - TortoiseSVN
+// Copyright (C) 2007-2008 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -33,7 +33,8 @@ bool SwitchCommand::Execute()
 		CSVNProgressDlg progDlg;
 		theApp.m_pMainWnd = &progDlg;
 		progDlg.SetCommand(CSVNProgressDlg::SVNProgress_Switch);
-		progDlg.SetAutoClose(parser.GetLongVal(_T("closeonend")));
+		if (parser.HasVal(_T("closeonend")))
+			progDlg.SetAutoClose(parser.GetLongVal(_T("closeonend")));
 		progDlg.SetPathList(CTSVNPathList(cmdLinePath));
 		progDlg.SetUrl(dlg.m_URL);
 		progDlg.SetRevision(dlg.Revision);
